--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -87,7 +87,8 @@
                     <h1 class="med-single-hero-title">Отпустить тревожность и навязчивые мысли</h1>
                     <p class="med-single-hero-text">
                         Когда в голове бесконечная карусель: одни и те же мысли по кругу, тревога о будущем,
-                        прокручивание прошлого. Эта медитация помогает остановить этот поток, успокоить голову и тело,
+                        прокручивание прошлого. Эта аудиопрограмма помогает остановить этот поток, успокоить голову и
+                        тело,
                         наконец выдохнуть. После прослушивания становится тихо внутри, и вы перестаёте мучить себя тем,
                         что не даёт покоя.
                     </p>
@@ -181,7 +182,8 @@
                     </p>
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта медитация помогает выйти из этого режима. Не силой воли, не «просто перестань думать», а
+                        Эта аудиопрограмма помогает выйти из этого режима. Не силой воли, не «просто перестань думать»,
+                        а
                         мягко, через тело и состояние. Вы даёте мозгу сигнал: сейчас безопасно, можно отпустить.
                     </p>
                 </div>
@@ -215,7 +217,7 @@
 
                     <p class="med-single-problem-text extra-golden-line-after">
                         Особенно если вы устали от собственных мыслей и хотите наконец почувствовать тишину внутри. Эта
-                        медитация даст вам передышку, которую вы заслуживаете.
+                        аудиопрограмма даст вам передышку, которую вы заслуживаете.
                     </p>
                 </div>
             </div>
