--- a/meditations/letting-go-of-control-meditation.html
+++ b/meditations/letting-go-of-control-meditation.html
@@ -79,7 +79,6 @@
             </nav>
         </div>
     </header>
-
     <main>
         <!-- Hero с аудио -->
         <section class="med-single-hero" id="hero">
@@ -89,7 +88,8 @@
                     <h1 class="med-single-hero-title">Отпустить тревожность и навязчивые мысли</h1>
                     <p class="med-single-hero-text">
                         Если вы постоянно прокручиваете: почему он так сказал, что имел в виду, а что будет если... это
-                        контроль. Ум держит прошлое и будущее, а жить в настоящем не получается. Эта медитация помогает
+                        контроль. Ум держит прошлое и будущее, а жить в настоящем не получается. Эта Аудиопограмма
+                        помогает
                         разжать хватку, перестать цепляться за то, что нельзя изменить, и начать чувствовать жизнь здесь
                         и сейчас.
                     </p>
@@ -185,7 +185,8 @@
                     </p>
 
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта медитация помогает разжать эту хватку. Не отказаться от ответственности, а перестать держать
+                        Эта аудиопограмма помогает разжать эту хватку. Не отказаться от ответственности, а перестать
+                        держать
                         то, что не в ваших руках. Отпустить прошлое, потому что его не изменить. Отпустить будущее,
                         потому что оно ещё не наступило.
                     </p>
@@ -219,7 +220,8 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Если вы устали всё контролировать и хотите наконец выдохнуть, эта медитация для вас. Отпустите
+                        Если вы устали всё контролировать и хотите наконец выдохнуть, эта аудиопограмма для вас.
+                        Отпустите
                         то, что не можете изменить, и почувствуйте, как становится легче.
                     </p>
                 </div>
