Add family protection med page

--- a/meditations.html
+++ b/meditations.html
@@ -295,7 +295,8 @@
                             перестаёт пробивать. Вы как за невидимым щитом, за которым стоит сила вашего рода.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/family-protection.html" class="med-card-link"
+                            aria-label="Go to family protection meditation">
                             Узнать больше
                         </a>
                     </article>
