--- a/meditations/family-protection.html
+++ b/meditations/family-protection.html
@@ -86,13 +86,11 @@
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
                     <p class="med-single-badge">Аудиопрограмма Сурии</p>
-                    <h1 class="med-single-hero-title">Отпустить тревожность и навязчивые мысли</h1>
+                    <h1 class="med-single-hero-title">Защита рода</h1>
                     <p class="med-single-hero-text">
-                        Если вы постоянно прокручиваете: почему он так сказал, что имел в виду, а что будет если... это
-                        контроль. Ум держит прошлое и будущее, а жить в настоящем не получается. Эта Аудиопограмма
-                        помогает
-                        разжать хватку, перестать цепляться за то, что нельзя изменить, и начать чувствовать жизнь здесь
-                        и сейчас.
+                        Родовая защита самая естественная защита человека. Без свечей, ритуалов и обрядов. Просто
+                        слушайте, и с каждым разом защита будет крепче. Чужой негатив, зависть, тяжёлые люди всё это
+                        перестаёт пробивать. Вы как за невидимым щитом, за которым стоит сила вашего рода.
                     </p>
                     <p class="med-single-price">3 000 ₽</p>
                     <a href="#contact" aria-lable="Go to contact section" class="btn-primary med-single-cta">
@@ -100,9 +98,8 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/letting-go-of-control-meditation-image-focus.png"
-                        alt="Обложка аудиопрограммы 'Отпустить тревожность и навязчивые мысли'"
-                        class="med-single-hero-image">
+                    <img src="../assets/images/meditations-images/family-protection-meditation-image-focus.png"
+                        alt="Родовая защита — аудиопрограмма Сурии" class="med-single-hero-image">
                 </figure>
             </div>
         </section>
@@ -111,21 +108,20 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <h2 class="med-single-problem-title ">
-                        Отпускаю контроль:<br>
+                        Защита рода:<br>
 
                     </h2>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        перестаньте держать то, что не в ваших руках
-
+                        чтобы чужое не пробивало.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Представьте: он написал «ок» вместо нормального ответа. И вы час анализируете: почему так
-                        коротко? Обиделся? Или занят? А может, охладел? Перечитываете переписку, ищете знаки.
+                        Представьте что вы почистились, восстановились, чувствуете себя хорошо. Выходите в мир а там
+                        снова это всё. Завистливая коллега, токсичная свекровь, нытик-подруга, хамы в очереди. И через
+                        пару дней вы опять как выжатая губка.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Или другое: на работе сказали «поговорим завтра», и вы всю ночь прокручиваете, что это значит.
-                        Уволят? Повысят? Что я сделала не так? Вы пытаетесь просчитать то, что просчитать невозможно.
-                        Знакомо?
+                        Знакомо? Это потому что чистка убирает, баланс восстанавливает но без защиты всё налипает
+                        заново.
                     </p>
                 </div>
             </div>
@@ -133,43 +129,45 @@
         <!-- Как помогает -->
         <section class="med-single-benefits">
             <div class="container">
-                <h2 class="section-title">Как выглядит гиперконтроль:</h2>
+                <h2 class="section-title">Когда защита слабая, вы как дом без дверей:
+                </h2>
                 <div class="med-single-benefits-grid">
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы анализируете каждое слово, каждую интонацию, каждый знак препинания в сообщениях.
+                            Зашли в торговый центр в хорошем настроении вышли с тяжёлой головой и раздражением.
+                            Нахватались чужого фона.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Пытаетесь предугадать, что будет, и подготовиться ко всем вариантам заранее.
+                            Позвонила мама с претензиями и вы полдня не можете прийти в себя, хотя вроде ничего
+                            страшного не сказала.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Не можете отпустить ситуацию, пока не поймёте её «до конца».
+                            Коллега на работе сливает вам свои проблемы, а потом вам плохо, а ей полегчало.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Прошлое не отпускает: вы возвращаетесь к разговорам, которые были месяцы назад.
+                            После встречи с некоторыми людьми чувствуете себя обесточенной, хотя просто поболтали.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Будущее пугает: вы живёте в «а что если», вместо того чтобы жить сейчас.
+                            Чужие конфликты затягивают вас, даже если вы не участвуете, переживаете за всех.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы устали, но остановиться не можете. Как будто если перестанете контролировать, всё
-                            развалится.
+                            Ощущение, что вы открыты всем ветрам. Любой может зайти и наследить в вашем пространстве.
                         </p>
                     </div>
                 </div>
@@ -180,16 +178,12 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        Контроль это иллюзия безопасности. Кажется: если всё продумаю, ничего плохого не случится. Но на
-                        самом деле вы просто тратите энергию на то, что не можете изменить. И упускаете жизнь, которая
-                        происходит прямо сейчас.
+                        Родовая защита это не магия. Это связь с силой вашего рода, которая как корни у дерева. Она
+                        всегда была, просто у многих ослабла.
                     </p>
-
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта аудиопограмма помогает разжать эту хватку. Не отказаться от ответственности, а перестать
-                        держать
-                        то, что не в ваших руках. Отпустить прошлое, потому что его не изменить. Отпустить будущее,
-                        потому что оно ещё не наступило.
+                        Эта программа помогает её восстановить и укрепить без ритуалов, просто регулярным
+                        прослушиванием.
                     </p>
                 </div>
             </div>
@@ -200,18 +194,17 @@
                 <h2 class="section-title">Что реально чувствуется потом:</h2>
                 <ul class="med-single-effect-list">
                     <li>
-                        Вы перестаёте прокручивать. Мысли отпускают ситуацию, и вы можете переключиться.
+                        Чужой негатив перестаёт залипать. Вы рядом с тяжёлым человеком, а вам нормально. Не цепляет.
+                    </li>
+                    <li>
+                        Вы чувствуете границу: вот я, вот другие. Чужие эмоции это их эмоции, не ваши.
 
                     </li>
                     <li>
-                        Появляется ощущение «будь что будет, я справлюсь». Спокойная уверенность вместо тревожного
-                        контроля.
+                        Появляется ощущение щита за спиной. Вы не одна, за вами род.
                     </li>
                     <li>
-                        Вы начинаете замечать настоящее. Не жить в голове, а чувствовать жизнь здесь и сейчас.
-                    </li>
-                    <li>
-                        Уходит напряжение. Вы больше не держите мир на своих плечах.
+                        После общения с людьми вы остаетесь в своей энергии. Не нужно потом час отлеживаться.
                     </li>
                 </ul>
             </div>
@@ -221,9 +214,8 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Если вы устали всё контролировать и хотите наконец выдохнуть, эта аудиопограмма для вас.
-                        Отпустите
-                        то, что не можете изменить, и почувствуйте, как становится легче.
+                        Слушайте регулярно днём или перед сном. С каждым разом защита будет крепче. Как забор вокруг
+                        дома: вы внутри в безопасности, а чужое остаётся снаружи.
                     </p>
                 </div>
             </div>
