--- a/meditations.html
+++ b/meditations.html
@@ -315,7 +315,7 @@
                             снова «в себе», на своём месте.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="meditations/energy-balance.html" target="_blank" rel="noopener" class="med-card-link"
+                        <a href="meditations/energy-balance.html" class="med-card-link"
                             aria-label="Go to energy balance">
                             Узнать больше
                         </a>
