Add free mind& body med page

--- a/meditations.html
+++ b/meditations.html
@@ -336,7 +336,8 @@
                             внутри тишина и покой.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/free-mind-and-body.html" class="med-card-link"
+                            aria-label="Go to free mind and body meditation">
                             Узнать больше
                         </a>
                     </article>
