--- a/meditations/energy-balance.html
+++ b/meditations/energy-balance.html
@@ -100,9 +100,8 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/letting-go-of-control-meditation-image-focus.png"
-                        alt="Обложка аудиопрограммы 'Отпустить тревожность и навязчивые мысли'"
-                        class="med-single-hero-image">
+                    <img src="../assets/images/meditations-images/energy-balance-meditation-image-focus.png"
+                        alt="Изображение для медитации 'Баланс энергий'" class="med-single-hero-image">
                 </figure>
             </div>
         </section>
