--- a/meditations/free-mind-and-body.html
+++ b/meditations/free-mind-and-body.html
@@ -85,13 +85,12 @@
             <div class="container med-single-hero-inner">
                 <div class="med-single-hero-main">
                     <p class="med-single-badge">Аудиопрограмма Сурии</p>
-                    <h1 class="med-single-hero-title">Баланс энергий
-                    </h1>
+                    <h1 class="med-single-hero-title">Освободи голову и тело </h1>
                     <p class="med-single-hero-text">
-                        После очищения или тяжёлых дней часто остается ощущение пустоты, как будто всё лишнее убрали, а
-                        сил всё равно нет. Эта медитация помогает собрать себя обратно, вернуть внутреннюю устойчивость.
-                        После прослушивания чувствуется спокойствие, уверенность и ощущение, что вы снова «в себе», на
-                        своём месте.
+                        Чтобы убрать из себя всю чужую энергию: от косых взглядов, зависти, обид на вас, сглазов, злости
+                        и тяжести после общения с негативными людьми. Всё, что налипает и тянет вниз. После
+                        прослушивания чувствуете, будто с души сняли слой грязи дышится легко, тело расслабляется, а
+                        внутри тишина и покой.
                     </p>
                     <p class="med-single-price">3 000 ₽</p>
                     <a href="#contact" aria-lable="Go to contact section" class="btn-primary med-single-cta">
@@ -99,9 +98,8 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/letting-go-of-control-meditation-image-focus.png"
-                        alt="Обложка аудиопрограммы 'Отпустить тревожность и навязчивые мысли'"
-                        class="med-single-hero-image">
+                    <img src="../assets/images/meditations-images/free-mind-and-body-meditation-image-focus.png"
+                        alt="Изображение для медитации 'Освободи голову и тело'" class="med-single-hero-image">
                 </figure>
             </div>
         </section>
@@ -110,18 +108,18 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <h2 class="med-single-problem-title ">
-                        Баланс энергий:<br>
+                        Сброс перегруза:<br>
                     </h2>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        верните себя себе
+                        освободи голову и тело
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Представьте что, вы наконец разгребли завалы. Выплакались, выговорились, отпустили что-то
-                        тяжёлое. Или сделали чистку, убрали чужое.
+                        Приходите вечером домой и внутри всё кипит или, наоборот, как будто батарейка на нуле. Снимаете
+                        обувь, падаете на диван и понимаете, что внутри все еще напряженно.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Вроде должно стать легче, но внутри странная пустота. Как квартира после ремонта, чисто, но голо
-                        и неуютно. Знакомо?
+                        Плечи как деревянные, в голове крутится весь день, а в груди тяжелый комок. Знакомо до боли,
+                        правда?
                     </p>
                 </div>
             </div>
@@ -129,45 +127,48 @@
         <!-- Как помогает -->
         <section class="med-single-benefits">
             <div class="container">
-                <h2 class="section-title">Что обычно происходит после «очищений»:</h2>
+                <h2 class="section-title">Что обычно накапливается:</h2>
                 <div class="med-single-benefits-grid">
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы вроде отпустили обиду на маму, а теперь не понимаете, что вообще чувствуете. Пусто.
+                            Утром в метро кто-то влез без очереди, толкнул, а ты промолчала и весь день этот осадок
+                            внутри грызет.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Расстались с человеком, который тянул вниз, но вместо облегчения как будто часть себя
-                            потеряли.
+                            На работе начальник на совещании: «А почему это не готово? Ты же обещала!» и ты сидишь
+                            красная, хотя реально всё сделала, просто он забыл.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Переболели, выздоровели, а сил нет. Тело здоровое, но вы как выжатая тряпка.
+                            Подруга в вотсапе час ныла про своего парня, а ты слушала, успокаивала, и потом сама
+                            чувствуешь себя выжатой, хотя твои проблемы никто не спросил.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Уволились с токсичной работы, но вместо радости, растерянность и тревога «а что теперь?».
-
+                            Коллега весь день в офисе орала по телефону и ты это всё невольно впитала, теперь сама на
+                            взводе.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Сделали энергетическую чистку, убрали негатив, а внутри не наполненность, а гулкая пустота.
+                            Зашла в инсту «на минуточку» увидела, как бывшая одноклассница в Дубае на яхте, а подруга
+                            вышла замуж и уже с животиком. И сразу: «Блин, а я что, лузер?»
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Выплакали всё за выходные, а в понедельник любое слово коллеги выбивает из колеи, нет
-                            защиты.
+                            Мужчина написал сухо «ок» на твоё длинное сообщение или вообще не прочитал, и ты весь вечер
+                            думаешь, что опять что-то не так сказала.
                         </p>
                     </div>
                 </div>
@@ -178,12 +179,13 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        Это нормально. Когда уходит чужое и тяжёлое, на его месте не сразу появляется своё. Нужно заново
-                        наполниться, вернуть себе свою энергию, свою устойчивость.
+                        Всё это копится, как мусор в корзине, который забываешь вынести. Голова не успевает переварить.
+                        Ложитесь в постель а там тяжело в груди, тревожно, злость на всех или просто пустота. Утром
+                        встаёте разбитая, хотя вроде спали 8 часов.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Эта медитация как мягко собрать себя по кусочкам обратно. 10–15 минут, лучше утром, и вы
-                        настраиваетесь на день из своего центра, а не из пустоты.
+                        Эта медитация как вынести наконец этот мусор. Всего 10–15 минут перед сном, и вы тихо сливаете
+                        весь этот дневной хлам.
                     </p>
                 </div>
             </div>
@@ -194,16 +196,20 @@
                 <h2 class="section-title">Что реально чувствуется потом:</h2>
                 <ul class="med-single-effect-list">
                     <li>
-                        Возвращается ощущение «я это я». Не размытое, не чужое, а своё, знакомое.
+                        В голове тишина. Мысли перестают крутиться: «А вдруг он обиделся?», «А вдруг меня уволят?», «А
+                        вдруг я никогда не…».
                     </li>
                     <li>
-                        Появляется внутренняя опора. Вас не качает от каждого косого взгляда или неудачного слова.
+                        Уходит эта противная усталость. Вместо «блин, завтра опять на работу, опять то же самое, день
+                        сурка» ты думаешь: «сегодня был полный звездец, но я его пережила. Теперь можно выдохнуть и
+                        поспать».
                     </li>
                     <li>
-                        Спокойствие без заторможенности. Вы здесь, вы присутствуете, но без нервяка.
+                        Та тревога, которая фоном всегда жужжит («а вдруг что-то пойдёт не так?»), просто затыкается.
                     </li>
                     <li>
-                        Уверенность, которая идёт изнутри, а не от одобрения других.
+                        Возвращаешься к себе настоящей. Ты снова здесь в своём теле, со своими чувствами. А не как
+                        робот, который весь день реагировал на всех вокруг.
                     </li>
                 </ul>
             </div>
@@ -213,8 +219,9 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Попробуйте. Включите утром перед началом дня и почувствуете, как возвращаетесь в себя. Не пустая
-                        оболочка, а вы настоящая и собранная.
+                        Ложитесь в кровать, включаете медитацию и через 15 минут почувствуете, как всё это гуано дня
+                        тихо уходит. Утром проснётесь легче и спокойнее. Как будто кто-то ночью открыл окно и проветрил
+                        вас изнутри
                     </p>
                 </div>
             </div>
