Add fkeramic ties med page

--- a/meditations.html
+++ b/meditations.html
@@ -356,7 +356,8 @@
                             свободной.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/breaking-karmic-ties.html" class="med-card-link"
+                            aria-label="Узнать больше о разрыве кармической связи">
                             Узнать больше
                         </a>
                     </article>
