--- a/meditations.html
+++ b/meditations.html
@@ -375,7 +375,8 @@
                             перестаёт быть мечтой и становится внутренним решением, которое запускает реализацию.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/wish-fulfillment.html" class="med-card-link"
+                            aria-label="Узнать больше об исполнении желания">
                             Узнать больше
                         </a>
                     </article>
