--- a/meditations/breaking-karmic-ties.html
+++ b/meditations/breaking-karmic-ties.html
@@ -182,7 +182,7 @@
 
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        ЭЭта медитация работает там, где бессильна голова, на уровне энергии и силы вашего подсознания.
+                        Эта медитация работает там, где бессильна голова, на уровне энергии и силы вашего подсознания.
                         Вы отсоединяетесь от этого человека, забираете обратно свои части, которые оставили в нём, и
                         отпускаете его части из себя.
                     </p>
