--- a/meditations/wish-fulfillment.html
+++ b/meditations/wish-fulfillment.html
@@ -100,7 +100,7 @@
                 </div>
                 <figure class="med-single-hero-figure">
                     <img src="../assets/images/meditations-images/wish-fulfillment-meditation-image-focus.png"
-                        alt="Исполнение желания — аудиопрограмма Сурии">
+                        class="med-single-hero-image" alt="Исполнение желания — аудиопрограмма Сурии">
                 </figure>
             </div>
         </section>
