Add harmony med page

--- a/meditations.html
+++ b/meditations.html
@@ -394,7 +394,8 @@
                             центром притяжения: люди тянутся, возможности приходят, а бывшие иногда возвращаются сами.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/harmony-inside-me.html" class="med-card-link"
+                            aria-label="Узнать больше о гармонии внутри себя">
                             Узнать больше
                         </a>
                     </article>
